[package]
name = "hide_and_seek"
version = "0.1.0"
authors = ["Yasushi Sakai <ysshski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bulletproofs="2.0.0"
merlin="2.0.0"
curve25519-dalek="2.0.0"
rand="0.7.3"
blake3="0.2.2"
chrono={version="0.4.11", features=["serde"]}
serde={ version="1.0.0", features=["derive"]}
serde_json = "1.0.0"
